# forest-py-estudos

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
data/: README.md
models/: README.md
notebooks/: 01_introducao_dados_florestais.ipynb  02_eda_pef_vinhedo.ipynb  03_dendrometria_classica.ipynb  04_inventario_amostragem.ipynb
reports/tables/: 03_comparativo_volumetria.csv  04_comparativo_amostragem.csv
src/forestpy/: __init__.py
src/forestpy/data/: __init__.py  loaders.py
src/forestpy/dendrometria/: __init__.py  fitting.py  hipsometria.py  volume.py
src/forestpy/inventario/: __init__.py  amostragem.py
src/forestpy/ml/: __init__.py  metrics.py
src/forestpy/ml/cnn/: __init__.py
src/forestpy/ml/mlp/: __init__.py
src/forestpy/sitio/: __init__.py
src/forestpy/utils/: __init__.py  config.py  io.py  logging.py  reproducibility.py
src/forestpy/viz/: __init__.py  diagnostics.py  eda.py  style.py  trees.py
tests/: conftest.py  test_amostragem.py  test_data_loaders.py  test_dendrometria.py  test_fitting.py  test_hipsometria.py  test_metrics.py  test_viz.py
