[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ──────────────────────────────────────────────────────────
# Metadados do pacote
# ──────────────────────────────────────────────────────────
[project]
name = "forestpy"
version = "0.1.0"
description = "Estudos avançados em Machine Learning aplicado à Engenharia Florestal"
authors = [{name = "Pedro Luiz R. Vaz de Melo", email = "pedroschuldiner@outlook.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["forestry", "machine-learning", "deep-learning", "pytorch", "geospatial", "dendrometry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── Core científico ──
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",

    # ── ML clássico ──
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "optuna>=3.6",

    # ── Deep Learning (PyTorch) ──
    "torch>=2.3",
    "torchvision>=0.18",
    "torchmetrics>=1.4",

    # ── Geoespacial ──
    "geopandas>=1.0",
    "rasterio>=1.3",
    "shapely>=2.0",
    "rioxarray>=0.15",
    "contextily>=1.6",

    # ── Visualização ──
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",

    # ── Utilidades ──
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbqa>=1.8",
]

[project.urls]
Homepage = "https://github.com/PedroLuizskt/forest-py-estudos"
Repository = "https://github.com/PedroLuizskt/forest-py-estudos"

# ──────────────────────────────────────────────────────────
# Configuração das ferramentas
# ──────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Linha longa: black já cuida disso

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --cov=forestpy --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/forestpy"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
